tests/lean/1760.lean.expected.out
1760.lean:2:31-3:6: error: unexpected token '#check'; expected ':', ']' or term
() : Unit
