tests/lean/1760.lean
-- should run in linear time
#check [[[[[[[[[[[[[[[[[[[[[[[[
#check (((((((((((((((((((((((())))))))))))))))))))))))
